--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "lucide-react": "^0.562.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-router-dom": "^7.12.0",
     "recharts": "^3.6.0",
     "tailwind-merge": "^3.4.0"
   },
