feat: Comprehensive Dashboard & Trial Finder Updates
- Trial Finder UI Refinements:
  - Implemented fixed table layout to prevent layout shifts.
  - Normalized 'Intervention Type' tags and removed 'Mutation' suffix.
  - Filtered out 'Temporarily Not Available' statuses.
  - Added strict column widths.

- Dashboard Analytics Integration:
  - Implemented 'api_analytics.py' with endpoints for Funding, Genetics, and Map data.
  - Connected React widgets to live API with loading/error states.

- Frontend Architecture:
  - Added 'AboutPage' and 'QueryBuilderPage'.
  - Integrated shadcn/ui components.
  - Updated Navigation and global styles.

- Backend & DevOps:
  - Updated models and data ingestion scripts.
  - Removed obsolete Metabase config.
  - Improved dev scripts and docker setup.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,26 +3,6 @@ version: '3.8'
 services:
 
   # ---------------------------------------------------------------------------
-  # Metabase (BI Dashboard)
-  # ---------------------------------------------------------------------------
-  metabase:
-    image: metabase/metabase:latest
-    container_name: metabase
-    ports:
-      - "${METABASE_PORT}:3000"
-    environment:
-      MB_DB_TYPE: postgres
-      MB_DB_DBNAME: ${METABASE_DB_NAME}
-      MB_DB_PORT: 5432
-      MB_DB_USER: ${POSTGRES_USER}
-      MB_DB_Pass: ${POSTGRES_PASSWORD}
-      MB_DB_HOST: db
-      MB_SITE_URL: ${METABASE_SITE_URL}
-    depends_on:
-      - db
-    volumes:
-      - metabase_data:/metabase-data
-  # ---------------------------------------------------------------------------
   # PostgreSQL
   # ---------------------------------------------------------------------------
   # ---------------------------------------------------------------------------
@@ -39,11 +19,13 @@ services:
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      GEMINI_POSTGRES_USER: ${GEMINI_POSTGRES_USER}
+      GEMINI_POSTGRES_PASSWORD: ${GEMINI_POSTGRES_PASSWORD}
       # Allow trust for local development simplicity or rely on PG password
       POSTGRES_HOST_AUTH_METHOD: trust
     volumes:
       - postgres_data:/var/lib/postgresql
-      - ./docker/postgres/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./docker/postgres/init.sh:/docker-entrypoint-initdb.d/init.sh
 
   # ---------------------------------------------------------------------------
   # Adminer (Database Management UI)
@@ -57,8 +39,17 @@ services:
       - db
     restart: always
 
+  # ---------------------------------------------------------------------------
+  # Redis (Cache)
+  # ---------------------------------------------------------------------------
+  redis:
+    image: redis:alpine
+    container_name: redis_cache
+    ports:
+      - "6379:6379"
+    restart: always
+
 volumes:
   postgres_data:
-  metabase_data:
 
 
