--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.4",
     "@superset-ui/embedded-sdk": "^0.3.0",
@@ -20,11 +21,14 @@
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.26.2",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.562.0",
     "react": "^19.2.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^19.2.0",
+    "react-is": "^19.2.3",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.12.0",
     "recharts": "^3.6.0",
