chore: replace .env.gemini with an example file and add it to .gitignore.

--- a/.env.gemini.example
+++ b/.env.gemini.example
@@ -3,10 +3,10 @@
 # export $(cat .env.gemini | xargs) && gemini
 
 # Inherit/Duplicate values from main environment where appropriate
-POSTGRES_HOST=localhost
-POSTGRES_PORT=5432
-POSTGRES_DATABASE=als_data
+POSTGRES_HOST=
+POSTGRES_PORT=
+POSTGRES_DATABASE=
 
 # Specific Agent User
-POSTGRES_USER=gemini_ai_agent
-POSTGRES_PASSWORD=gemini_agent_password
+POSTGRES_USER=
+POSTGRES_PASSWORD=
